tests/paczka2/big_fuzzy/51440392.err
Error in line 4: w5AdNQm1 S486 80,7
Error in line 3: STmS S486 59,8
Error in line 24: STmS S175 50,2
Error in line 33: w5AdNQm1 A881 55,4
Error in line 47: S175 S486 57,6
Error in line 53: S175 A456 61,1
Error in line 55: S175 S486 93,0
Error in line 57: FRk00VG S486 51,9
Error in line 52: STmS S175 31,6
Error in line 79: FRk00VG A881 81,3
Error in line 80: e83xp3870s S175 64,9
Error in line 97: S175 S486 59,4
Error in line 107: w5AdNQm1 S175 18,1
Error in line 109: w5AdNQm1 A881 44,0
Error in line 115: e83xp3870s A456 65,6
Error in line 122: 5K9 A881 99,8
Error in line 133: 5Gm7y S486 55,3
Error in line 136: 5Gm7y S175 24,8
Error in line 146: w5AdNQm1 A456 50,1
Error in line 144: e83xp3870s S175 41,5
Error in line 157: e83xp3870s S486 51,2
Error in line 163: FRk00VG S486 99,7
Error in line 165: FRk00VG A456 32,1
Error in line 181: FRk00VG A881 43,9
Error in line 179: e83xp3870s A881 107,6
Error in line 191: e83xp3870s S486 46,3
Error in line 197: S175 A881 77,
Error in line 212: 5K9 S175 37,8
Error in line 214: 5K9 A881 82,3
Error in line 220: S175 S175 190,0
Error in line 218: w5AdNQm1 A881 97,8
Error in line 230: S175 S486 162,0
Error in line 215: e83xp3870s A456 35,8
Error in line 244: S175 S175 269,88
Error in line 236: 5K9 A881 65,3
